# opencal-examples

./: CMakeLists.txt  README.md
OpenCAL++/: CMakeLists.txt
OpenCAL++-Py/: life.py
OpenCAL++-Py/life/: life3D.py
OpenCAL++/cal_life/: CMakeLists.txt
OpenCAL++/cal_life/source/: life.cpp
OpenCAL++/cal_mod2CA3D/: CMakeLists.txt
OpenCAL++/cal_mod2CA3D/source/: mod2CA3D.cpp
OpenCAL++/cal_sciddicaT/: CMakeLists.txt
OpenCAL++/cal_sciddicaT-activecells/: CMakeLists.txt
OpenCAL++/cal_sciddicaT-activecells/source/: main.cpp  sciddicaT.cpp  sciddicaT.h
OpenCAL++/cal_sciddicaT-unsafe/: CMakeLists.txt
OpenCAL++/cal_sciddicaT-unsafe/source/: sciddicaT.cpp  sciddicaT.h
OpenCAL++/cal_sciddicaT/source/: main.cpp  sciddicaT.cpp  sciddicaT.h
OpenCAL-CL/: CMakeLists.txt
OpenCAL-CL/calcl_gl_heattransfer/: CMakeLists.txt
OpenCAL-CL/calcl_gl_heattransfer/source/: heattransfer.c
OpenCAL-CL/calcl_gl_mod2CA3D/: CMakeLists.txt  mod2_0000.txt
OpenCAL-CL/calcl_gl_mod2CA3D/buiild/: CMakeCache.txt  Makefile  cmake_install.cmake
OpenCAL-CL/calcl_gl_mod2CA3D/kernel/source/: mod2CA.cl
OpenCAL-CL/calcl_gl_mod2CA3D/source/: mod2CA3D.c
OpenCAL-CL/calcl_gl_sciddicaS3hex/: CMakeLists.txt
OpenCAL-CL/calcl_gl_sciddicaS3hex/source/: sciddicaS3Hex.c
OpenCAL-CL/calcl_gl_sciddicaT/: CMakeLists.txt
OpenCAL-CL/calcl_gl_sciddicaT/source/: sciddicaT.c
OpenCAL-CL/calcl_heattransfer/: CMakeLists.txt
OpenCAL-CL/calcl_heattransfer/source/: heattransfer.c
OpenCAL-CL/calcl_life/: CMakeLists.txt
OpenCAL-CL/calcl_life/kernel/source/: life.cl
OpenCAL-CL/calcl_life/source/: life.c
OpenCAL-CL/calcl_mbusu/: CMakeLists.txt
OpenCAL-CL/calcl_mbusu/kernel/include/: kernel.h
OpenCAL-CL/calcl_mbusu/kernel/source/: kernel.cl
OpenCAL-CL/calcl_mbusu/source/: MbusuCL.cpp  main.cpp  main.cpp~
OpenCAL-CL/calcl_mod2CA3D/: CMakeLists.txt
OpenCAL-CL/calcl_mod2CA3D/kernel/source/: life.cl
OpenCAL-CL/calcl_mod2CA3D/source/: mod2CA3D.c
OpenCAL-CL/calcl_sciara-fv2/: CMakeLists.txt  CMakeLists.txt~
OpenCAL-CL/calcl_sciara-fv2/include/: GISInfo.h  Sciara.h  configurationPathLib.h  io.h  vent.h
OpenCAL-CL/calcl_sciara-fv2/source/: GISInfo.cpp  Sciara.cpp  configurationPathLib.cpp  io.cpp  main.cpp  main.cpp~  vent.cpp
OpenCAL-CL/calcl_sciddicaT/: CMakeLists.txt
OpenCAL-CL/calcl_sciddicaT/source/: sciddicaT.c
OpenCAL-GL/: CMakeLists.txt
OpenCAL-GL/calgl_forestInsect/: CMakeLists.txt
OpenCAL-GL/calgl_forestInsect/source/: forestInsect.c  forestInsect.h  gui.c
OpenCAL-GL/calgl_heattransfer/: CMakeLists.txt
OpenCAL-GL/calgl_heattransfer/source/: calgl_heattransfer.c
OpenCAL-GL/calgl_mod2CA3D/: CMakeLists.txt
OpenCAL-GL/calgl_mod2CA3D/source/: mod2CA.c
OpenCAL-GL/calgl_omp_heattransfer/: CMakeLists.txt
OpenCAL-GL/calgl_omp_heattransfer/source/: calgl_omp_heattransfer.c
OpenCAL-GL/calgl_omp_sciddicaT/: CMakeLists.txt
OpenCAL-GL/calgl_omp_sciddicaT/source/: sciddicaT.c
OpenCAL-GL/calgl_sciddicaT/: CMakeLists.txt
OpenCAL-GL/calgl_sciddicaT/source/: sciddicaT.c
OpenCAL-GL/calgl_sciddicaT_explicit/: CMakeLists.txt
OpenCAL-GL/calgl_sciddicaT_explicit/source/: calgl_sciddicaT_explicit.c
OpenCAL-OMP/calomp_belousov-zhabotinsky-reaction_glut/: CMakeLists.txt
OpenCAL-OMP/calomp_heattransfer/: CMakeLists.txt
OpenCAL-OMP/calomp_heattransfer/source/: calomp_heattransfer.c
OpenCAL-OMP/calomp_life/: CMakeLists.txt
OpenCAL-OMP/calomp_life-glut/: CMakeLists.txt
OpenCAL-OMP/calomp_mbusu-glut/: CMakeLists.txt
OpenCAL-OMP/calomp_mod2CA3D/: CMakeLists.txt
OpenCAL-OMP/calomp_sciara-fv2/: CMakeLists.txt
OpenCAL-OMP/calomp_sciara-fv2/source/: configurationPathLib.cpp  main.cpp  vent.cpp
OpenCAL-OMP/calomp_sciddicaS3hex-glut/: CMakeLists.txt
OpenCAL-OMP/calomp_sciddicaS3hex-unsafe-explicit-glut/: CMakeLists.txt
OpenCAL-OMP/calomp_sciddicaS3hex-unsafe-glut/: CMakeLists.txt
OpenCAL-OMP/calomp_sciddicaT/: CMakeLists.txt
OpenCAL-OMP/calomp_sciddicaT-activecells/: CMakeLists.txt
OpenCAL-OMP/calomp_sciddicaT-activecells-glut/: CMakeLists.txt
OpenCAL-OMP/calomp_sciddicaT-explicit/: CMakeLists.txt
OpenCAL-OMP/calomp_sciddicaT-explicit-activecells/: CMakeLists.txt
OpenCAL-OMP/calomp_sciddicaT-glut/: CMakeLists.txt
OpenCAL-OMP/calomp_sciddicaT-unsafe/: CMakeLists.txt
OpenCAL-OMP/calomp_sciddicaT-unsafe-explicit/: CMakeLists.txt
OpenCAL-OMP/calomp_sciddicaT-unsafe-glut/: CMakeLists.txt
OpenCAL/cal_belousov-zhabotinsky-reaction_glut/: CMakeLists.txt  CMakeLists.txt~
OpenCAL/cal_cloverleaf/: CMakeLists.txt
OpenCAL/cal_eletromagnetic_finite_difference/: CMakeLists.txt
OpenCAL/cal_eletromagnetic_finite_difference/source/: cal_electromagnetic.cpp
OpenCAL/cal_heattransfer/: CMakeLists.txt
OpenCAL/cal_iso-3src-glut/: CMakeLists.txt
OpenCAL/cal_life/: CMakeLists.txt
OpenCAL/cal_life-glut/: CMakeLists.txt
OpenCAL/cal_life3D-glut/: CMakeLists.txt
OpenCAL/cal_mbusu-glut/: CMakeLists.txt
OpenCAL/cal_mod2CA3D/: CMakeLists.txt
OpenCAL/cal_mod2CA3D-glut/: CMakeLists.txt
OpenCAL/cal_mod2CA3D-glut/source/: gui.c  mod2CA3D.c  mod2CA3D.h
OpenCAL/cal_saturedFlow/: CMakeLists.txt  LastModFlow.txt  outModel  outModel_Emu  satured_SS_0000.txt  satured_Sorgente_LAST.txt  satured_SsumFlows_LAST.txt  satured_convergence_LAST.txt  satured_head_0000.txt  satured_head_LAST.txt
OpenCAL/cal_saturedFlow_river/: CMakeLists.txt  conversioneOutputModFlowInMatrice.cpp
OpenCAL/cal_sciara-fv2/: CMakeLists.txt
OpenCAL/cal_sciddicaS3hex-glut/: CMakeLists.txt
OpenCAL/cal_sciddicaS3hex-unsafe-explicit-glut/: CMakeLists.txt
OpenCAL/cal_sciddicaS3hex-unsafe-glut/: CMakeLists.txt
OpenCAL/cal_sciddicaT/: CMakeLists.txt
OpenCAL/cal_sciddicaT-activecells/: CMakeLists.txt
OpenCAL/cal_sciddicaT-activecells-glut/: CMakeLists.txt
OpenCAL/cal_sciddicaT-explicit/: CMakeLists.txt
OpenCAL/cal_sciddicaT-explicit-activecells/: CMakeLists.txt
OpenCAL/cal_sciddicaT-glut/: CMakeLists.txt
OpenCAL/cal_sciddicaT-unsafe/: CMakeLists.txt
OpenCAL/cal_sciddicaT-unsafe-explicit/: CMakeLists.txt
OpenCAL/cal_sciddicaT-unsafe-glut/: CMakeLists.txt
(+118 files in other folders)
